# Transform-Army-Platform

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE.md  COMPREHENSIVE_DIAGNOSIS_AND_FIXES.md  DEBUGGING_REPORT.md  DEPLOYMENT_VERIFICATION.md  DOCKER_BUILD_VERIFICATION.md  FINAL_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT_COMPLETE.md  IMPLEMENTATION_PRIORITIES.md  Makefile  PRODUCTION_CHECKLIST.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  SPRINT_SUMMARY.md  START_HERE.md  TEST_REPORT.md  TRANSFORM_ARMY_AI_COMPLETE_GUIDE.md  WORKSPACE_REVIEW_FINDINGS_REPORT.md  comprehensive_integration_test.py  package-lock.json  package.json  simple_integration_test.py  test_config_api.py  test_config_api_full.py
apps/adapter/: .env.example  AUTHENTICATION_IMPLEMENTATION.md  BACKEND_ISSUES_AND_FIXES.md  CRITICAL_FIXES_VERIFICATION.md  DEPENDENCY_CHANGES.md  Dockerfile  Dockerfile.worker  HUBSPOT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION.md  MODELS_IMPLEMENTATION_SUMMARY.md  PROVIDER_REGISTRATION.md  README.md  ZENDESK_IMPLEMENTATION.md  alembic.ini  debug_providers.py  docker-entrypoint.sh  main.py  main_simple.py  pyproject.toml  requirements.txt  simple_debug.py  test_api_structure.py  test_models.py  validate_syntax.py
apps/adapter/alembic/: README.md  README_MIGRATIONS.md  env.py
apps/adapter/alembic/versions/: 001_initial_schema.py  001b_update_tenant_schema.py  002_add_test_tenant.py  003_add_idempotency_table.py  004_add_row_level_security.py  005_add_workflow_tables.py  006_rename_action_log_metadata.py  (+1 more)
apps/adapter/api/: admin.py  calendar.py  crm.py  email.py  health.py  helpdesk.py  knowledge.py  logs.py  metrics.py  workflows.py
apps/adapter/core/: alerts.py  config.py  database.py  dependencies.py  exceptions.py  health.py  logging.py  metrics.py  provider_config.py  queue.py  redis_client.py  secrets.py  security_config.py  validation.py
apps/adapter/llm/: __init__.py  client.py  prompt_builder.py  token_counter.py  tools.py
apps/adapter/orchestration/: __init__.py  agent_executor.py  engine.py  state.py
apps/adapter/providers/: __init__.py  base.py  factory.py  registry.py
apps/adapter/repositories/: __init__.py  idempotency.py  workflow.py
apps/adapter/scripts/: test_rls.sql
apps/adapter/services/: audit.py  cache.py
apps/adapter/src/: main.py  main_simple.py
apps/adapter/tests/: api_test_collection.json
apps/adapter/workers/: job_worker.py
(+217 files in other folders)
